# oRatio

./: .gitmodules  CITATION.cff  CMakeLists.txt  README.md  oRatio.cpp
.github/workflows/: cmake.yml
examples/core/: README.md  example_04.rddl  example_09.rddl  example_10.rddl
examples/education/: README.md
examples/goac/: README.md  goac_domain.rddl
examples/incremental/: README.md
examples/logistics/: README.md
examples/telepresence/: README.md  telepresence_01.rddl  telepresence_02.rddl  telepresence_03.rddl  telepresence_04.rddl
examples/types/: README.md
examples/types/sv/: sv_0.rddl  sv_1.rddl  sv_2.rddl  sv_3.rddl
examples/urban_intelligence/: README.md
include/: agent.h  causal_graph.h  disjunction_flaw.h  enum_flaw.h  flaw.h  flaw.hpp  graph.h  graph.hpp  init.hpp.in  items.h  resolver.h  resolver.hpp  smart_type.h  smart_type.hpp  solver.h  solver.hpp  solver_api.hpp  solver_item.hpp  solver_listener.h  timeline.h  timeline.hpp  var_flaw.h
include/flaws/: atom_flaw.h  atom_flaw.hpp  bool_flaw.h  bool_flaw.hpp  disj_flaw.h  disj_flaw.hpp  disjunction_flaw.h  disjunction_flaw.hpp  enum_flaw.h  enum_flaw.hpp  exact_one_flaw.hpp
include/heuristics/: h_1.h  h_2.h
include/types/: agent.h  agent.hpp  consumable_resource.h  consumable_resource.hpp  reusable_resource.h  reusable_resource.hpp  state_variable.h  state_variable.hpp
src/: atom_flaw.cpp  causal_graph.cpp  disjunction_flaw.cpp  enum_flaw.cpp  flaw.cpp  graph.cpp  main.cpp  oRatioConfig.cmake.in  oRatioSolverConfig.cmake.in  resolver.cpp  smart_type.cpp  solver.cpp  solver_api.cpp  solver_item.cpp  state_variable.cpp  var_flaw.cpp
src/exec/: main.cpp
src/flaws/: atom_flaw.cpp  bool_flaw.cpp  disj_flaw.cpp  disjunction_flaw.cpp  disunction_flaw.cpp  enum_flaw.cpp  exact_one_flaw.cpp
src/heuristics/: h_1.cpp  h_2.cpp
src/types/: agent.cpp  consumable_resource.cpp  reusable_resource.cpp  state_variable.cpp
tests/: CMakeLists.txt  test_core.cpp  test_solver.cpp
