add_executable(solver_tests test_solver.cpp)
target_link_libraries(solver_tests PRIVATE oRatio ratioCore RiDDLe SeMiTONE json)

target_compile_definitions(solver_tests PRIVATE NUM_TESTS=1)

if(TEMPORAL_NETWORK_TYPE STREQUAL LA)
    add_test(NAME SolverTest00 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/core/example_00.rddl" "solution.json")
    add_test(NAME SolverTest01 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/core/example_01.rddl" "solution.json")
    add_test(NAME SolverTest02 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/core/example_02.rddl" "solution.json")
    add_test(NAME SolverTest03 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/core/example_03.rddl" "solution.json")
    add_test(NAME SolverTest04 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/core/example_04.rddl" "solution.json")
    add_test(NAME SolverTest05 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/core/example_05.rddl" "solution.json")
    add_test(NAME SolverTest06 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/core/example_06.rddl" "solution.json")
    add_test(NAME SolverTest07 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/core/example_07.rddl" "solution.json")
    add_test(NAME SolverTest08 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/core/example_08.rddl" "solution.json")
    add_test(NAME SolverTest09 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/core/example_09.rddl" "solution.json")
    add_test(NAME SolverTest10 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/core/example_10.rddl" "solution.json")
    add_test(NAME SolverTest11 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/core/example_11.rddl" "solution.json")
    add_test(NAME SolverTest12 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/core/example_12.rddl" "solution.json")
    set_tests_properties(SolverTest02 SolverTest05 SolverTest06 PROPERTIES WILL_FAIL TRUE)

    add_test(NAME RRTest00 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/types/rr/rr_0.rddl" "solution.json")
    add_test(NAME RRTest01 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/types/rr/rr_1.rddl" "solution.json")
    add_test(NAME RRTest02 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/types/rr/rr_2.rddl" "solution.json")
    add_test(NAME RRTest03 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/types/rr/rr_3.rddl" "solution.json")

    add_test(NAME SVTest00 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/types/sv/sv_0.rddl" "solution.json")
    add_test(NAME SVTest01 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/types/sv/sv_1.rddl" "solution.json")
    add_test(NAME SVTest02 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/types/sv/sv_2.rddl" "solution.json")

    add_test(NAME GOAC_1Pic_1Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_1pic_1wind.rddl" "solution.json")
    add_test(NAME GOAC_1Pic_2Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_1pic_2wind.rddl" "solution.json")
    add_test(NAME GOAC_1Pic_3Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_1pic_3wind.rddl" "solution.json")
    add_test(NAME GOAC_1Pic_4Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_1pic_4wind.rddl" "solution.json")
    add_test(NAME GOAC_1Pic_5Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_1pic_5wind.rddl" "solution.json")
    add_test(NAME GOAC_2Pic_1Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_2pic_1wind.rddl" "solution.json")
    add_test(NAME GOAC_2Pic_2Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_2pic_2wind.rddl" "solution.json")
    add_test(NAME GOAC_2Pic_3Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_2pic_3wind.rddl" "solution.json")
    add_test(NAME GOAC_2Pic_4Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_2pic_4wind.rddl" "solution.json")
    add_test(NAME GOAC_2Pic_5Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_2pic_5wind.rddl" "solution.json")
    add_test(NAME GOAC_3Pic_1Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_3pic_1wind.rddl" "solution.json")
    add_test(NAME GOAC_3Pic_2Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_3pic_2wind.rddl" "solution.json")
    add_test(NAME GOAC_3Pic_3Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_3pic_3wind.rddl" "solution.json")
    add_test(NAME GOAC_3Pic_4Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_3pic_4wind.rddl" "solution.json")
    add_test(NAME GOAC_3Pic_5Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_3pic_5wind.rddl" "solution.json")
    add_test(NAME GOAC_4Pic_1Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_4pic_1wind.rddl" "solution.json")
    add_test(NAME GOAC_4Pic_2Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_4pic_2wind.rddl" "solution.json")
    add_test(NAME GOAC_4Pic_3Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_4pic_3wind.rddl" "solution.json")
    add_test(NAME GOAC_4Pic_4Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_4pic_4wind.rddl" "solution.json")
    add_test(NAME GOAC_4Pic_5Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_4pic_5wind.rddl" "solution.json")
    add_test(NAME GOAC_5Pic_1Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_5pic_1wind.rddl" "solution.json")
    add_test(NAME GOAC_5Pic_2Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_5pic_2wind.rddl" "solution.json")
    add_test(NAME GOAC_5Pic_3Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_5pic_3wind.rddl" "solution.json")
    add_test(NAME GOAC_5Pic_4Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_5pic_4wind.rddl" "solution.json")
    #add_test(NAME GOAC_5Pic_5Wind COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/map.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/goac/goac_5pic_5wind.rddl" "solution.json")

    add_test(NAME Logistics_0 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/logistics/logistics_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/logistics/logistics_problem_0.rddl" "solution.json")
    add_test(NAME Logistics_1 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/logistics/logistics_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/logistics/logistics_problem_1.rddl" "solution.json")

    add_test(NAME Telepresence_0 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/telepresence/telepresence_00.rddl" "solution.json")
    add_test(NAME Telepresence_1 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/telepresence/telepresence_01.rddl" "solution.json")
    add_test(NAME Telepresence_2 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/telepresence/telepresence_02.rddl" "solution.json")
    add_test(NAME Telepresence_3 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/telepresence/telepresence_03.rddl" "solution.json")
    add_test(NAME Telepresence_4 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/telepresence/telepresence_04.rddl" "solution.json")

    add_test(NAME Education_1 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/education_01.rddl" "solution.json")
    add_test(NAME Education_2 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/education_02.rddl" "solution.json")

    add_test(NAME Matera_01 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_01.rddl" "solution.json")
    add_test(NAME Matera_02 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_02.rddl" "solution.json")
    add_test(NAME Matera_03 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_03.rddl" "solution.json")
    add_test(NAME Matera_04 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_04.rddl" "solution.json")
    add_test(NAME Matera_05 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_05.rddl" "solution.json")
    add_test(NAME Matera_06 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_06.rddl" "solution.json")
    add_test(NAME Matera_07 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_07.rddl" "solution.json")
    add_test(NAME Matera_08 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_08.rddl" "solution.json")
    add_test(NAME Matera_09 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_09.rddl" "solution.json")
    add_test(NAME Matera_10 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_10.rddl" "solution.json")
    add_test(NAME Matera_11 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_11.rddl" "solution.json")
    add_test(NAME Matera_12 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_12.rddl" "solution.json")
    add_test(NAME Matera_13 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_13.rddl" "solution.json")
    add_test(NAME Matera_14 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_14.rddl" "solution.json")
    add_test(NAME Matera_15 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_15.rddl" "solution.json")
    add_test(NAME Matera_16 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_16.rddl" "solution.json")
    add_test(NAME Matera_17 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_17.rddl" "solution.json")
    add_test(NAME Matera_18 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_18.rddl" "solution.json")
    add_test(NAME Matera_19 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_19.rddl" "solution.json")
    add_test(NAME Matera_20 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/education/matera/Matera_20.rddl" "solution.json")

    add_test(NAME UI_01_03 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_01_03.rddl" "solution.json")
    add_test(NAME UI_01_06 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_01_06.rddl" "solution.json")
    add_test(NAME UI_01_09 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_01_09.rddl" "solution.json")
    add_test(NAME UI_01_12 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_01_12.rddl" "solution.json")
    add_test(NAME UI_01_15 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_01_15.rddl" "solution.json")
    add_test(NAME UI_01_18 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_01_18.rddl" "solution.json")
    add_test(NAME UI_01_21 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_01_21.rddl" "solution.json")
    add_test(NAME UI_01_24 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_01_24.rddl" "solution.json")
    add_test(NAME UI_01_27 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_01_27.rddl" "solution.json")
    add_test(NAME UI_01_30 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_01_30.rddl" "solution.json")
    add_test(NAME UI_02_03 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_02_03.rddl" "solution.json")
    add_test(NAME UI_02_06 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_02_06.rddl" "solution.json")
    add_test(NAME UI_02_09 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_02_09.rddl" "solution.json")
    add_test(NAME UI_02_12 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_02_12.rddl" "solution.json")
    add_test(NAME UI_02_15 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_02_15.rddl" "solution.json")
    add_test(NAME UI_02_18 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_02_18.rddl" "solution.json")
    add_test(NAME UI_02_21 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_02_21.rddl" "solution.json")
    add_test(NAME UI_02_24 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_02_24.rddl" "solution.json")
    add_test(NAME UI_02_27 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_02_27.rddl" "solution.json")
    add_test(NAME UI_02_30 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_02_30.rddl" "solution.json")
    add_test(NAME UI_03_03 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_03_03.rddl" "solution.json")
    add_test(NAME UI_03_06 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_03_06.rddl" "solution.json")
    add_test(NAME UI_03_09 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_03_09.rddl" "solution.json")
    add_test(NAME UI_03_12 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_03_12.rddl" "solution.json")
    add_test(NAME UI_03_15 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_03_15.rddl" "solution.json")
    add_test(NAME UI_03_18 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_03_18.rddl" "solution.json")
    add_test(NAME UI_03_21 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_03_21.rddl" "solution.json")
    add_test(NAME UI_03_24 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_03_24.rddl" "solution.json")
    add_test(NAME UI_03_27 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_03_27.rddl" "solution.json")
    add_test(NAME UI_03_30 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_domain.rddl" "${PROJECT_SOURCE_DIR}/extern/core/extern/riddle/examples/urban_intelligence/urban_intelligence_03_30.rddl" "solution.json")
elseif(TEMPORAL_NETWORK_TYPE STREQUAL DL)
endif()