add_executable(core_tests test_core.cpp)
add_dependencies(core_tests oRatioLib)
target_link_libraries(core_tests PRIVATE oRatioLib)

add_executable(solver_tests test_solver.cpp)
add_dependencies(solver_tests oRatioLib)
target_compile_definitions(solver_tests PRIVATE NUM_TESTS=1)
target_link_libraries(solver_tests PRIVATE oRatioLib)

add_test(NAME oRatio_CoreTest COMMAND core_tests WORKING_DIRECTORY ${CMAKE_BINARY_DIR})

if(TEMPORAL_NETWORK_TYPE STREQUAL LRA)
    add_test(NAME SolverTest00 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/riddle/examples/core/example_00.rddl" "solution.json")
    add_test(NAME SolverTest01 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/riddle/examples/core/example_01.rddl" "solution.json")
    add_test(NAME SolverTest02 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/riddle/examples/core/example_02.rddl" "solution.json")
    add_test(NAME SolverTest03 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/riddle/examples/core/example_03.rddl" "solution.json")
    add_test(NAME SolverTest04 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/riddle/examples/core/example_04.rddl" "solution.json")
    add_test(NAME SolverTest05 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/riddle/examples/core/example_05.rddl" "solution.json")
    add_test(NAME SolverTest06 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/riddle/examples/core/example_06.rddl" "solution.json")
    add_test(NAME SolverTest07 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/riddle/examples/core/example_07.rddl" "solution.json")
    add_test(NAME SolverTest08 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/riddle/examples/core/example_08.rddl" "solution.json")
    add_test(NAME SolverTest09 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/riddle/examples/core/example_09.rddl" "solution.json")
    add_test(NAME SolverTest10 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/riddle/examples/core/example_10.rddl" "solution.json")
    add_test(NAME SolverTest11 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/riddle/examples/core/example_11.rddl" "solution.json")
    add_test(NAME SolverTest12 COMMAND solver_tests "${PROJECT_SOURCE_DIR}/extern/riddle/examples/core/example_12.rddl" "solution.json")
    set_tests_properties(SolverTest02 SolverTest05 SolverTest06 PROPERTIES WILL_FAIL TRUE)
elseif(TEMPORAL_NETWORK_TYPE STREQUAL DL)
endif()